Fixed z-index issues with popout and table separator

--- a/art17/static/css/art17-ui.css
+++ b/art17/static/css/art17-ui.css
@@ -57,6 +57,7 @@ abbr {
     left: -1px;
     right: -1px;
     height: 10px;
+    z-index: 500;
     border-bottom: 1px solid #bbb;
     background: white;
 }
@@ -587,6 +588,7 @@ a.conclusion:hover {
 }
 /* POPOUT */
 .popout {
+    z-index: 550;
     display:none;
     min-width: 180px;
     position: absolute;
@@ -676,7 +678,7 @@ a.conclusion:hover {
 /* POPOUT SIZE UNIT (TABLE HEADER) */
 .popout.size_unit_th {
     border-color: #aaa!important;
-    min-width: initial;
+    min-width: inherit;
     padding: 0;
     -webkit-box-shadow: 0 0px 3px 0px rgba(0,0,0,0.25);
     box-shadow: 0 0px 3px 0px rgba(0,0,0,0.25);
